--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# Play
 logs
 project/project
 project/target
@@ -5,3 +6,11 @@ target
 tmp
 .history
 dist
+
+# Eclipse IDE
+bin/
+.settings/
+.target/
+.classpath
+.project
+.cache
