--- a/conf/application.conf
+++ b/conf/application.conf
@@ -17,15 +17,35 @@ application.langs="en"
 # Default to Global in the root package.
 # global=Global
 
-# Database configuration
-# ~~~~~ 
-# You can declare as many datasources as you want.
-# By convention, the default datasource is named `default`
+# play Salat
+dbplugin = disabled
+evolutionplugin = disabled
+ehcacheplugin = disabled
+
+# MongoDB
+mongodb.default.db = "UniSearch"
+# Optional values
+mongodb.default.host = "127.0.0.1"
+mongodb.default.port = 27017
+mongodb.default.user = "UniSearch"
+mongodb.default.password = "hcraeSinU"
+
+# MongoURI
+# ~~~~~
+# a MongoURI can also be used http://www.mongodb.org/display/DOCS/Connections
+# mongodb.default.uri = "mongodb://127.0.0.1:27017,mongodb.org:1337/salat-test"
+
+# WriteConcern
+# ~~~~~
+# Can be any of the following
 #
-# db.default.driver=org.h2.Driver
-# db.default.url="jdbc:h2:mem:play"
-# db.default.user=sa
-# db.default.password=
+# fsyncsafe - Exceptions are raised for network issues and server errors; Write operations wait for the server to flush data to disk.
+# replicassafe - Exceptions are raised for network issues and server errors; waits for at least 2 servers for the write operation.
+# safe - Exceptions are raised for network issues and server errors; waits on a server for the write operation.
+# normal - Exceptions are raised for network issues but not server errors.
+
+#mongodb.default.writeconcern = "safe"
+
 
 # Evolutions
 # ~~~~~
